students/KashpirDmitriy/task_02/src/k8s/overlays/variant34/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
    - port: 80
      targetPort: 8012
