students/KashpirDmitriy/task_02/src/k8s/overlays/variant34/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
    - host: web34.local
